--- a/css/index.css
+++ b/css/index.css
@@ -74,8 +74,6 @@
 }
 
 body {
-    /*margin: 0;*/
-    /*padding: 0;*/
     font-family: 'PT Sans', sans-serif;
     background: url(http://eskipaper.com/images/blue-space-pictures-1.jpg) no-repeat;
 }
@@ -95,6 +93,7 @@ body {
     height: 450px;
     margin-top: 30px;
     margin-bottom: 30px;
+    display:flex;
 }
 
 .card .poster {
