--- a/src/scenes/filmDetail/styles.css
+++ b/src/scenes/filmDetail/styles.css
@@ -1,6 +1,7 @@
 
 body{
     background-color: #abd8ff;
+    margin:0px !important;
 }
 
 h1,
@@ -36,6 +37,46 @@ p {
 
 .mainContainer{
     padding-left:15px;
+    border-radius: 16px;
+    background: linear-gradient(45deg, #ade7ff, #92c2e0);
+    box-shadow:  31px -31px 62px #6d91a7, 
+        -31px 31px 62px #d7ffff;
+}
+.big-banner{
+    height: 300px;
+    overflow: hidden;
+    width: 100%;
+    min-height: 300px;
+    background-position: center center;
+    background-size: contain;
+}
+
+.big-banner img{
+    height: 100%;
+    min-height: 300px;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+    transition: height 0.4s ease-out 0s;
+    -webkit-transition: height 0.4s ease-out;
+    -moz-transition: height 0.4s ease-out;
+    -ms-transition: height 0.4s ease-out;
+    -o-transition: height 0.4s ease-out;
+    transition: height 0.4s ease-out;
+}
+
+.big-banner-shadow{
+    bottom: 0;
+    height: 300px;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+    background: -webkit-radial-gradient(20% 20%, farthest-corner, transparent, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1));
+    background: -o-radial-gradient(20% 20%, farthest-corner, transparent, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1));
+    background: -moz-radial-gradient(20% 20%, farthest-corner, transparent, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1));
+    background: radial-gradient(farthest-corner at 20% 20%, transparent, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1));
 }
 
 .secondaryContainer{
