change in background image

--- a/src/scenes/saveFilm/styles.css
+++ b/src/scenes/saveFilm/styles.css
@@ -1,9 +1,8 @@
 body{
-
     background-color: #E1E1E1; 
     background-size:cover;
+    background: url(http://eskipaper.com/images/blue-space-pictures-1.jpg) no-repeat;
 }
-
 
 .contact-form{
 
